--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMxkzpeTo9tfXQnT8wNyest",
+      "authorship_tag": "ABX9TyPTwx1wM9K9wpH7vCq/szWL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 29,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1910,7 +1910,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input15, _, width = read_grid('input15_example_big')\n",
+        "input15, _, width = read_grid('input15')\n",
         "start_grid = [row for row in input15 if row.startswith('#')]\n",
         "height = len(start_grid)\n",
         "start_instructions = [dirs90_symbols[c] for c in reduce(lambda instructions, row: instructions + row, [row for row in input15 if row and not row.startswith('#')], '')]"
@@ -1918,7 +1918,7 @@
       "metadata": {
         "id": "vpSBxmx-s7T4"
       },
-      "execution_count": 95,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1933,22 +1933,13 @@
     {
       "cell_type": "code",
       "source": [
-        "def calc_moves(pos, dir, what, grid) -> list[tuple[int, int]]:\n",
-        "  new_pos = vec_add(pos, dir)\n",
-        "  if get_cell(new_pos, grid) == '.':\n",
-        "    return [(pos, new_pos, what)]\n",
-        "  if get_cell(new_pos, grid) == '#':\n",
-        "    return []\n",
-        "  if get_cell(new_pos, grid) == 'O':\n",
-        "    box_moves = calc_moves(new_pos, dir, 'O', grid)\n",
-        "    if box_moves:\n",
-        "      return [(pos, new_pos, what)] + box_moves\n",
-        "  return []"
+        "def calc_moves(pos, dir, what, grid):\n",
+        "  raise Exception(\"Not implemented\")"
       ],
       "metadata": {
         "id": "Kwd1spA39rdU"
       },
-      "execution_count": 93,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1957,9 +1948,11 @@
         "def move(pos, dir, grid):\n",
         "  moves = calc_moves(pos, dir, '@', grid)\n",
         "  if moves:\n",
-        "    m = { t: w for f, t, w in moves }\n",
+        "    _, new_pos, _ = moves[0]\n",
+        "    new_cells = { to_pos: what for from_pos, to_pos, what in moves }\n",
+        "    prev_not_in_new = { from_pos for from_pos, to_pos, what in moves if not from_pos in new_cells }\n",
         "    w = len(grid[0])  # avoid using global width var here as it varies between part 1 and 2\n",
-        "    return moves[0][1], [''.join('.' if (r, c) == pos else m[(r, c)] if (r, c) in m else get_cell((r, c), grid) for c in range(w)) for r in range(height)]\n",
+        "    return new_pos, [''.join('.' if (r, c) in prev_not_in_new else new_cells[(r, c)] if (r, c) in new_cells else get_cell((r, c), grid) for c in range(w)) for r in range(height)]\n",
         "  return pos, grid\n",
         "\n",
         "def next_move(pos, instructions, grid):\n",
@@ -1971,7 +1964,7 @@
       "metadata": {
         "id": "lMB7dQn3vsh1"
       },
-      "execution_count": 92,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1981,12 +1974,26 @@
         "pos = start_pos\n",
         "grid = start_grid\n",
         "instr = start_instructions\n",
+        "\n",
+        "# implement calc_moves\n",
+        "def calc_moves(pos, dir, what, grid):\n",
+        "  new_pos = vec_add(pos, dir)\n",
+        "  if get_cell(new_pos, grid) == '.':\n",
+        "    return [(pos, new_pos, what)]\n",
+        "  if get_cell(new_pos, grid) == '#':\n",
+        "    return []\n",
+        "  if get_cell(new_pos, grid) == 'O':\n",
+        "    box_moves = calc_moves(new_pos, dir, 'O', grid)\n",
+        "    if box_moves:\n",
+        "      return [(pos, new_pos, what)] + box_moves\n",
+        "  return []\n",
+        "\n",
         "while instr:\n",
         "  pos, instr, grid = next_move(pos, instr, grid)\n",
         "\n",
-        "# print(pos)\n",
-        "# for r in grid:\n",
-        "#   print(r)\n",
+        "print(pos)\n",
+        "for r in grid:\n",
+        "  print(r)\n",
         "\n",
         "sum(r * 100 + c for r in range(height) for c in range(width) if get_cell((r, c), grid) == 'O')"
       ],
@@ -1995,19 +2002,76 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nrOfagoF9oHN",
-        "outputId": "3081a36a-e2f5-4c70-ae07-224cedfde150"
+        "outputId": "2c8ce126-1b49-4e5c-837e-e77b325152ef"
       },
-      "execution_count": 96,
+      "execution_count": 19,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(13, 6)\n",
+            "##################################################\n",
+            "#.O..#OOOOO....#O..OOO.......OO...O.O..OOO.O.OOO.#\n",
+            "#.O..OOO....O....OO.OO.....O.....O...##..O#...OOO#\n",
+            "#O.........O.....#..O..#......#..#OO..........OOO#\n",
+            "#O.#.....O........OO...OOOO...#.OO..##O..OO.#..#O#\n",
+            "#........O.O......O...O..O.....O#O...O.##.....#OO#\n",
+            "#OO........O...OO#OOO.........OOO..........OOOOOO#\n",
+            "#OO...........OO#OOOO..........O...#..#O.......OO#\n",
+            "#OO.O..O....#.#..#OOO.................#O........O#\n",
+            "#OO.#..#..#...O...OO..........................O.O#\n",
+            "##O.........OOO....OO....#......O.O.O............#\n",
+            "#O...O..O..OOO...OO..........O.O..OOO#..O.#.O#O..#\n",
+            "#O...#O.#.O..O...OOO..........O..........O..OOOOO#\n",
+            "#.O#..@...O.OOOO.#OOO.O..OOOO......O.....O...O#..#\n",
+            "##O..#.....O.......O#......O.OO.OO.OO....O##.OOO.#\n",
+            "#OOO.....O....#......OO...O..OOOO#......O....OOOO#\n",
+            "##..##...#OOO.#..O...#..O..#.O.O.O.....O#....OO#.#\n",
+            "#O..O.O.OO##O....O..O...................OOOO...#.#\n",
+            "#O..O..O..#.#.#.....O.....OO...OO.#O.O......#...O#\n",
+            "##.....O........OOO.OO#O.OO...O#OO.#..O...#......#\n",
+            "#O......#...OO..#...O#...O....OO##.O..........OOO#\n",
+            "#O......##O..O.......OOOO..OOO.....OO.O.....##.#.#\n",
+            "##......OO...OO....O.......#........OO#....O.....#\n",
+            "#OO..#..#OO#.O.O...........OOO.......#OO.......OO#\n",
+            "#..#O....O#.........O............#..O..OO........#\n",
+            "#.O#O........#......O........O.....OO#.O#........#\n",
+            "##.#O........O..O..##........#......OO#OO....OO..#\n",
+            "#...#...#.............OOO....#.O....OO##O.....#O.#\n",
+            "#.OO........O........#O.O...O..O#O##.O.....#..O###\n",
+            "#OOO......OOO.OO.......OOOO.#..OOOOO...........O##\n",
+            "#.O#..#...OO......#....O....O....OO#...........OO#\n",
+            "#OOO......#.......O...#..........#.#...O#..O....O#\n",
+            "#.............OOOOOO.............O#O..O.O#..O..O##\n",
+            "#OO...............#.O......O.....OO.OO..O...#...##\n",
+            "#O..#....OO..O.O..#OO.O..##.....O...O.......OO..O#\n",
+            "#OO......#O..O.OOOO.O.O...O..#......O....OO..O..##\n",
+            "#OO........#..OO.O#O.............OOO#O.O##...O..O#\n",
+            "#OOO.......#.O.O..OO...O.#......O..#...#OO...O.OO#\n",
+            "#.#O.....#.O.#.O#....O......OOOOO....#OOOO...O##.#\n",
+            "#...#.O.......OOO#.O..##O..O...#O.#OO##.O.....O..#\n",
+            "#O.....O.......O#.OOOO....#..O...#OO.OO#O......#.#\n",
+            "#O..O.......O#.........OO.O..#O..O........#....OO#\n",
+            "#O....#O....OOO....#..OO....O.............#.....O#\n",
+            "#..#...#.............O#OOO.OOO.O......#O........##\n",
+            "##.#..#.O...O.....OOO....#.O.O...........#O..O..O#\n",
+            "#....#O.#...OOO.....O...............O...O#O...OOO#\n",
+            "#..........O..#.............#O....O#.#O.#.#...#O.#\n",
+            "#........OOO....O..............O..OOO...#OO....O.#\n",
+            "#OO.....OO#OOO.......O#OO.#O.O##OOOOO.O.......OOO#\n",
+            "##################################################\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10092"
+              "1360570"
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 19
         }
       ]
     },
@@ -2036,23 +2100,124 @@
         "grid = widened_start_grid\n",
         "instr = start_instructions\n",
         "\n",
-        "# TODO replace calc_moves function\n",
+        "# re-implement calc_moves\n",
+        "def calc_moves(pos, dir, what, grid):\n",
+        "  new_pos = vec_add(pos, dir)\n",
+        "  if get_cell(new_pos, grid) == '.':\n",
+        "    return [(pos, new_pos, what)]\n",
+        "  if get_cell(new_pos, grid) == '#':\n",
+        "    return []\n",
+        "  if get_cell(new_pos, grid) == '[':\n",
+        "    if dir == dir_right or dir == dir_left or what == '[':\n",
+        "      box_moves = calc_moves(new_pos, dir, '[', grid)\n",
+        "      if box_moves:\n",
+        "        return [(pos, new_pos, what)] + box_moves\n",
+        "      return []\n",
+        "    # (up or down) and what (']' or '@')\n",
+        "    box_moves_1 = calc_moves(new_pos, dir, '[', grid)\n",
+        "    box_moves_2 = calc_moves(vec_add(new_pos, dir_right), dir, ']', grid)\n",
+        "    if box_moves_1 and box_moves_2:\n",
+        "      return [(pos, new_pos, what)] + box_moves_1 + box_moves_2\n",
+        "  if get_cell(new_pos, grid) == ']':\n",
+        "    if dir == dir_right or dir == dir_left or what == ']':\n",
+        "      box_moves = calc_moves(new_pos, dir, ']', grid)\n",
+        "      if box_moves:\n",
+        "        return [(pos, new_pos, what)] + box_moves\n",
+        "      return []\n",
+        "    # (up or down) and what ('[' or '@')\n",
+        "    box_moves_1 = calc_moves(new_pos, dir, ']', grid)\n",
+        "    box_moves_2 = calc_moves(vec_add(new_pos, dir_left), dir, '[', grid)\n",
+        "    if box_moves_1 and box_moves_2:\n",
+        "      return [(pos, new_pos, what)] + box_moves_1 + box_moves_2\n",
+        "  return []\n",
         "\n",
         "while instr:\n",
         "  pos, instr, grid = next_move(pos, instr, grid)\n",
         "\n",
-        "# print(pos)\n",
-        "# for r in grid:\n",
-        "#   print(r)\n",
+        "print(pos)\n",
+        "for r in grid:\n",
+        "   print(r)\n",
         "\n",
         "sum(r * 100 + c for r in range(height) for c in range(widened_width) if get_cell((r, c), grid) == '[')"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "collapsed": true,
-        "id": "qz3JYLCC2TGy"
+        "id": "qz3JYLCC2TGy",
+        "outputId": "a21fcc70-0650-41b0-ecf8-4331bf08cb90"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(33, 12)\n",
+            "####################################################################################################\n",
+            "##....[]..##..[]..........[]..##....[]....[][]..[]..[]...[][].[][]......[]......[][]........[][]..##\n",
+            "##........[][]................[]........[]......[]..[]........[]..[]......####[][][]##[]....[][][]##\n",
+            "##....[]......[]............[]..[]##....[]....##[].[].......##[]..##[][]....[].....[][][]....[][].##\n",
+            "##[]..##[]........[][][][]..[][]........[]..................##...[].....####........[][]##....##[]##\n",
+            "##..[]....[]......[][]..........[][][][]........................##[]......[]..####..[][][]..##..[]##\n",
+            "##..............[]..[]..[][]......##..[]........[]...............[][].....[]..[][]...[].[]..[][][]##\n",
+            "##[]......[]........[]......[][]##....[][]..[]..[]...............[]...##....##[][].......[].[][][]##\n",
+            "##..[]..............[]..##..##....##........[]..........................[][]##...........[]...[][]##\n",
+            "##[][]..##....##....##......[]....[].......[]......[]..[][]................[][]...................##\n",
+            "####[]................[]..........[]..........[]..##....[]...............[]................[].....##\n",
+            "##[][]......[]..[]......[]...................[][].[]....[]................##........##....##......##\n",
+            "##..[]....##....##......[][]......................[][]...[].......................[]..............##\n",
+            "##..[]##........[]....[]..........##......[]......................[].[]...............[]....##....##\n",
+            "####[]....##......[][].....[].[][]......##...................[].......[]............####....[]....##\n",
+            "##..[]..[]......[][][]....[]##[][]..[]................[]........[]##.[]...........[].[].[].....[].##\n",
+            "####....####[]....##..[][]..##.......[]...##..........##............[]..........##[]..[][]....##..##\n",
+            "##[]......[]..[][][]####....[]........[]..............[]...........[].....[]..[]...[].[]......##..##\n",
+            "##..[]....[][]......##[]##..##........[].[]..[]...............[]..[]##.[][]...[]......[]##....[]..##\n",
+            "####[]....[]..........[][]........[]....[][]##................##....[]##.[]...[]....##[]..........##\n",
+            "##......[]......##..............##........##[][]................####..[][]..[][]....[][][]........##\n",
+            "##[][]..[][]....####......[]..[][][]...[].[].[].......[][][][][][]..........[][][][][]..####..##..##\n",
+            "####..........[][].....[].......[][].............[]...##.[][].[].[].......[]##.[][]....[].........##\n",
+            "##[]......##..[]##....##..[][].[]...............[]..[]..[]..[].......[].[]##[][][]................##\n",
+            "##....##.......[]...##.[]..........................[]...[].[].....##.....[].[].[][]...............##\n",
+            "##..[]##..................##..[]...[][][].........[]...[][]........[].[][]##....##[]..............##\n",
+            "####..##[]..[]...[]...................####....[].[]....[].##[]........[]..[]##[]....[]......[][][]##\n",
+            "##..[]..##......##[].................[][].................##.........[].....####.........[].##[][]##\n",
+            "##[][]..[].........[].................[][]##........[].[].......##..####..[][]........##.[].[]######\n",
+            "##......[][]........[]...[]...........[]............[]..##........[].....................[].[][]####\n",
+            "##....##[][]##......................##[]..........[][][].....[]....[].##.[]...............[][][][]##\n",
+            "##..[].....[].......##......................##...[][][]...[][]....##..##........##........[]..[]..##\n",
+            "##..........[]........[].[].....[]...........[]..[][]...[][][]....[]##[]....[]..[]##....[]......####\n",
+            "##..........@......[][].[].......[].##.......[].....[][][]..[]...........[].....[]......##......####\n",
+            "##......##[].....[][]..[][].[].[].[]##............####[][].[].....................................##\n",
+            "##...[].......[]..##..........[][][][]...............[]...##.[].......................[]........####\n",
+            "##..................[]##..[]....[][]##..............[][]....[]....[][]..##[]..[]####............[]##\n",
+            "##[][]................##..[]..[][].........[][]...##.........[][].....##[][]..##[]..............[]##\n",
+            "##..##............##[]....##....##.......[]........[]........[]...........##[][][]..........####..##\n",
+            "##......##[].....[]...........[]..##....[][]####....[]........##....##....####....................##\n",
+            "##[]..[]....[]..........[]......##........[]..[]....##........[][]##[]....[][]##.......[].....##..##\n",
+            "##[]....[].....[].....[][]##......[]......[]..[][]........##......[][].[].........[]##............##\n",
+            "##..........##.[]...[]........[][]....##......[][]....[]..........[][][]...[][]...[]##............##\n",
+            "##..[]##......##[]......[]................[]##[][]...[]...........[]...[]...##...[][][].[]......####\n",
+            "####..##....##..........[]....[][]........[]......##[]..........................[]##.........[][].##\n",
+            "##........##[]..##..........[]........[]....[]......[]......[]..[]..............[]##[]......[][][]##\n",
+            "##..[][]..............[]....##..[]......[]............[]##[].......[].##[]##....##..##......##..[]##\n",
+            "##..............[]..[]......[]....[]............[]....[]..[][]....[]....[]......##....[][][]......##\n",
+            "##................[]##..[]..[]............[]##..[]..##....[]####[][]..[][]..[][]......[][][]......##\n",
+            "####################################################################################################\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1381446"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     }
   ]
 }
