--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPTwx1wM9K9wpH7vCq/szWL",
+      "authorship_tag": "ABX9TyMo+IysLs1yaEZ3l0tNNvL4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1924,22 +1924,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Day 15, part 1, follow instructions and evaluate box positions"
+        "Day 15, utils"
       ],
       "metadata": {
-        "id": "hiI-ayLr7f7f"
+        "id": "8gh3aR0xObmh"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "def calc_moves(pos, dir, what, grid):\n",
+        "# rerturn list of (from_pos, to_pos, what) moves given pos and all that would be pushed\n",
+        "def calc_moves(pos, dir, what, grid) -> list[tuple[tuple[int, int], tuple[int, int], str]]:\n",
         "  raise Exception(\"Not implemented\")"
       ],
       "metadata": {
         "id": "Kwd1spA39rdU"
       },
-      "execution_count": 13,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1964,8 +1965,17 @@
       "metadata": {
         "id": "lMB7dQn3vsh1"
       },
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 15, part 1, follow instructions and evaluate box positions, original grid\n"
+      ],
+      "metadata": {
+        "id": "hiI-ayLr7f7f"
+      }
     },
     {
       "cell_type": "code",
@@ -2002,9 +2012,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nrOfagoF9oHN",
-        "outputId": "2c8ce126-1b49-4e5c-837e-e77b325152ef"
+        "outputId": "c843c5ea-e5fb-4a0f-b967-7b1c7decfc1d"
       },
-      "execution_count": 19,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -2071,14 +2081,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 26
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 15, part 2, wide boxes"
+        "Day 15, part 2, follow instructions and evaluate box positions, widened grid with wide boxes `[]`"
       ],
       "metadata": {
         "id": "-rRXNeDe89cr"
@@ -2095,12 +2105,12 @@
         "}\n",
         "widened_start_grid = [''.join(widened[c] for c in row) for row in start_grid]\n",
         "widened_width = len(widened_start_grid[0])\n",
-        "widened_start_pos = [(r, c) for r in range(1, height-1) for c in range(1, widened_width-1) if get_cell((r, c), widened_start_grid) == '@'][0]\n",
+        "widened_start_pos = [(r, c) for r in range(1, height-1) for c in range(2, widened_width-2) if get_cell((r, c), widened_start_grid) == '@'][0]\n",
         "pos = widened_start_pos\n",
         "grid = widened_start_grid\n",
         "instr = start_instructions\n",
         "\n",
-        "# re-implement calc_moves\n",
+        "# re-implement calc_moves for up and down moves of wide and unaligned boxes\n",
         "def calc_moves(pos, dir, what, grid):\n",
         "  new_pos = vec_add(pos, dir)\n",
         "  if get_cell(new_pos, grid) == '.':\n",
@@ -2146,9 +2156,9 @@
         },
         "collapsed": true,
         "id": "qz3JYLCC2TGy",
-        "outputId": "a21fcc70-0650-41b0-ecf8-4331bf08cb90"
+        "outputId": "2c646af7-1d19-495c-c8f1-9de3c8864283"
       },
-      "execution_count": 20,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -2215,7 +2225,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 27
         }
       ]
     }
