--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyNWenLQ1C3VWKkjJOHZQNoY",
+      "authorship_tag": "ABX9TyPenD9M8Zv8tzfAfcPeoTmE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1933,7 +1933,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# return list of (from_pos, to_pos, what) moves given pos and all that would be pushed, abstract method\n",
+        "# return list of (from_pos, to_pos, what) moves for given pos and all (box) positions that would be pushed, abstract method\n",
         "def calc_moves(pos, dir, what, grid) -> list[tuple[tuple[int, int], tuple[int, int], str]]:\n",
         "  raise Exception(\"Not implemented\")"
       ],
