feat: add functions retrieve input and attempt to retrieve test input

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8uB2ssW7IHO6T3CIG/74z",
+      "authorship_tag": "ABX9TyNhoZZ90RaOj1Eo9VZGNErE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,171 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "Qy0LSaFPC5ME"
+        "id": "Qy0LSaFPC5ME",
+        "collapsed": true
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import requests\n",
+        "\n",
+        "def get_aoc_input(year, day):\n",
+        "    \"\"\"\n",
+        "    Retrieves the Advent of Code input for a given year and day.\n",
+        "\n",
+        "    Args:\n",
+        "        year (int): The Advent of Code year.\n",
+        "        day (int): The Advent of Code day.\n",
+        "\n",
+        "    Returns:\n",
+        "        str: The input data as a string, or None if retrieval fails.\n",
+        "    \"\"\"\n",
+        "    session_cookie = input(\"Please enter your Advent of Code session cookie: \")\n",
+        "    if not session_cookie:\n",
+        "        print(\"Session cookie is required to retrieve Advent of Code input.\")\n",
+        "        return None\n",
+        "\n",
+        "    headers = {\n",
+        "        'Cookie': f'session={session_cookie}'\n",
+        "    }\n",
+        "\n",
+        "    # Advent of Code typically doesn't provide a direct URL for 'test' input.\n",
+        "    # The standard input URL is for the puzzle input.\n",
+        "    # For test inputs, users usually copy-paste from the problem description.\n",
+        "    # This function will retrieve the *puzzle* input. If you need test input\n",
+        "    # you will generally have to manually copy it from the problem page.\n",
+        "    url = f\"https://adventofcode.com/{year}/day/{day}/input\"\n",
+        "\n",
+        "    print(f\"Attempting to retrieve Advent of Code {year} Day {day} puzzle input from {url}...\")\n",
+        "    try:\n",
+        "        response = requests.get(url, headers=headers)\n",
+        "        response.raise_for_status() # Raise an exception for HTTP errors\n",
+        "        return response.text.strip()\n",
+        "    except requests.exceptions.HTTPError as e:\n",
+        "        if e.response.status_code == 404:\n",
+        "            print(f\"Error: Input not found for Advent of Code {year} Day {day}. Check if the year/day is valid or if it's released yet. (Status Code: 404)\")\n",
+        "        elif e.response.status_code == 400:\n",
+        "            print(f\"Error: Bad request. This often indicates an invalid session cookie. (Status Code: 400)\")\n",
+        "        else:\n",
+        "            print(f\"HTTP error occurred: {e}\")\n",
+        "        return None\n",
+        "    except requests.exceptions.RequestException as e:\n",
+        "        print(f\"An error occurred while making the request: {e}\")\n",
+        "        return None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "35c9f9e4"
+      },
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "def get_aoc_test_input(year, day):\n",
+        "    \"\"\"\n",
+        "    Attempts to retrieve the Advent of Code test input for a given year and day. Returns first candidate on problem page.\n",
+        "\n",
+        "    Args:\n",
+        "        year (int): The Advent of Code year.\n",
+        "        day (int): The Advent of Code day.\n",
+        "\n",
+        "    Returns:\n",
+        "        str: The input data as a string, or None if retrieval fails.\n",
+        "    \"\"\"\n",
+        "    session_cookie = input(\"Please enter your Advent of Code session cookie: \")\n",
+        "    if not session_cookie:\n",
+        "        print(\"Session cookie is required to retrieve Advent of Code input.\")\n",
+        "        return None\n",
+        "\n",
+        "    headers = {\n",
+        "        'Cookie': f'session={session_cookie}'\n",
+        "    }\n",
+        "\n",
+        "    # Construct the URL for the problem page\n",
+        "    problem_url = f\"https://adventofcode.com/{year}/day/{day}\"\n",
+        "\n",
+        "    print(f\"Attempting to retrieve Advent of Code {year} Day {day} problem page from {problem_url}...\")\n",
+        "\n",
+        "    try:\n",
+        "        # Make the HTTP GET request\n",
+        "        response = requests.get(problem_url, headers=headers)\n",
+        "        response.raise_for_status() # Raise an exception for HTTP errors (4xx or 5xx)\n",
+        "        problem_page_html = response.text\n",
+        "        print(\"Successfully retrieved problem page HTML.\")\n",
+        "    except requests.exceptions.HTTPError as e:\n",
+        "        if e.response.status_code == 404:\n",
+        "            print(f\"Error: Problem page not found for Advent of Code {year} Day {day}. Check if the year/day is valid. (Status Code: 404)\")\n",
+        "        elif e.response.status_code == 400:\n",
+        "            print(f\"Error: Bad request. This often indicates an invalid session cookie. (Status Code: 400)\")\n",
+        "        else:\n",
+        "            print(f\"HTTP error occurred: {e}\")\n",
+        "        problem_page_html = None\n",
+        "    except requests.exceptions.RequestException as e:\n",
+        "        print(f\"An error occurred while making the request: {e}\")\n",
+        "        problem_page_html = None\n",
+        "\n",
+        "    if problem_page_html:\n",
+        "        print(f\"\\nFirst 500 characters of retrieved HTML:\\n---\\n{problem_page_html[:500]}\\n---\")\n",
+        "    else:\n",
+        "        print(f\"Failed to retrieve Advent of Code {year} Day {day} problem page HTML.\")\n",
+        "        return None\n",
+        "\n",
+        "    soup = BeautifulSoup(problem_page_html, 'html.parser')\n",
+        "\n",
+        "    # Find all <code> tags\n",
+        "    code_tags = soup.find_all('code')\n",
+        "\n",
+        "    print(f\"Found {len(code_tags)} <code> tags. Inspecting content for test input:\")\n",
+        "    print(\"---\")\n",
+        "\n",
+        "    test_input_candidates = []\n",
+        "    for i, code_tag in enumerate(code_tags):\n",
+        "        # Advent of Code usually puts test inputs in <pre><code>...</code></pre> blocks\n",
+        "        # or sometimes directly in <code> tags within paragraphs.\n",
+        "        # We'll collect all of them and let the user visually identify.\n",
+        "        content = code_tag.get_text(strip=True)\n",
+        "        if content:\n",
+        "            test_input_candidates.append(content)\n",
+        "            print(f\"Candidate {i+1}:\\n{content}\\n\")\n",
+        "\n",
+        "    if test_input_candidates:\n",
+        "        print(\"Test input candidates extracted. Please review them to identify the actual test input.\")\n",
+        "    else:\n",
+        "        print(\"No text content found within <code> tags. Test input might be in another tag or format.\")\n",
+        "        return None\n",
+        "\n",
+        "    test_input = test_input_candidates[0] # Assuming Candidate 1 is the correct test input\n",
+        "\n",
+        "    print(\"Identified Test Input:\")\n",
+        "    print(\"---------------------\")\n",
+        "    print(test_input)\n",
+        "    print(\"---------------------\")\n",
+        "\n",
+        "    return test_input"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FwCcOq_MJ1RT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gImhfqVGJ1hG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
