feat: add utilities

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhoZZ90RaOj1Eo9VZGNErE",
+      "authorship_tag": "ABX9TyOWfBLz0kruACBE8P2kUjd0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Read input"
+      ],
+      "metadata": {
+        "id": "kX6hF9FVPT3d"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 47,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -83,6 +92,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Attempt to read test input. Needs verification, alternatively copy/paste test input into a multi-line string (important to not have a line break after the opening \"\"\"!)\n",
+        "```\n",
+        "\"\"\"line 0\n",
+        "line 1\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "Uh7YRlRMPWsm"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "35c9f9e4"
@@ -93,7 +115,9 @@
         "\n",
         "def get_aoc_test_input(year, day):\n",
         "    \"\"\"\n",
-        "    Attempts to retrieve the Advent of Code test input for a given year and day. Returns first candidate on problem page.\n",
+        "    Attempts to retrieve the Advent of Code test input for a given year and day.\n",
+        "    Prints all candidates for verification and returns first candidate on problem page.\n",
+        "    If the first candidate is incorrect, do not use it, but copy/paste from the problem page into a multiline string!\n",
         "\n",
         "    Args:\n",
         "        year (int): The Advent of Code year.\n",
@@ -173,25 +197,76 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 26,
+      "execution_count": 46,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Utilities"
+      ],
+      "metadata": {
+        "id": "dVkXKp3GPPba"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from collections import Counter\n",
+        "from functools import reduce\n",
+        "from itertools import groupby, islice, takewhile\n",
+        "import math, re\n",
+        "\n",
+        "def vec_add(v1, v2):\n",
+        "  return tuple(sum(i) for i in zip(v1, v2))\n",
+        "\n",
+        "def vec_sub(v1, v2):\n",
+        "  return tuple(i[0] - i[1] for i in zip(v1, v2))\n",
+        "\n",
+        "dirs45 = [(dy, dx) for dy in [-1, 0, 1] for dx in [-1, 0, 1] if dy != 0 or dx != 0]\n",
+        "\n",
+        "dir_up = (-1, 0)\n",
+        "dir_right = (0, 1)\n",
+        "dir_down = (1, 0)\n",
+        "dir_left = (0, -1)\n",
+        "\n",
+        "dirs90 = [dir_up, dir_right, dir_down, dir_left]\n",
+        "dirs90_symbols = {\n",
+        "    '^': dir_up,\n",
+        "    '>': dir_right,\n",
+        "    'v': dir_down,\n",
+        "    '<': dir_left\n",
+        "}\n",
+        "turn_right = {dir_up: dir_right, dir_right: dir_down, dir_down: dir_left, dir_left: dir_up}\n",
+        "turn_left = {dir_up: dir_left, dir_left: dir_down, dir_down: dir_right, dir_right: dir_up}\n",
+        "\n",
+        "def in_range(p, dimensions):\n",
+        "  y, x = p\n",
+        "  height, width = dimensions\n",
+        "  return y >= 0 and y < height and x >= 0 and x < width\n",
+        "\n",
+        "def get_cell(p, grid):\n",
+        "  y, x = p\n",
+        "  return grid[y][x]\n",
+        "\n",
+        "# use with itertools islice(limit), islice(start, limit, step), takewhile(predicate, iterate(...))\n",
+        "def iterate(start, func):\n",
+        "  current = start\n",
+        "  while True:\n",
+        "    yield current\n",
+        "    current = func(current)\n",
+        "\n",
+        "def read_grid(s):\n",
+        "  lines = [[c for c in line.strip()] for line in s.splitlines()]\n",
+        "  height = len(lines)\n",
+        "  width = len(lines[0])\n",
+        "  return lines, height, width\n",
+        ""
+      ],
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "gImhfqVGJ1hG"
-      },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     }
   ]
