fix: remove session cookie from output

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS/m7YoWxjOeHD5fQFtJQe",
+      "authorship_tag": "ABX9TyOTFg/mxhaNvuXFv5mwejM9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,13 +46,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
       },
       "outputs": [],
       "source": [
+        "from IPython.core.display import clear_output\n",
         "import requests\n",
         "\n",
         "def get_aoc_input(year, day):\n",
@@ -70,6 +71,8 @@
         "    if not session_cookie:\n",
         "        print(\"Session cookie is required to retrieve Advent of Code input.\")\n",
         "        return None\n",
+        "\n",
+        "    clear_output();\n",
         "\n",
         "    headers = {\n",
         "        'Cookie': f'session={session_cookie}'\n",
@@ -140,6 +143,8 @@
         "        print(\"Session cookie is required to retrieve Advent of Code input.\")\n",
         "        return None\n",
         "\n",
+        "    clear_output();\n",
+        "\n",
         "    headers = {\n",
         "        'Cookie': f'session={session_cookie}'\n",
         "    }\n",
@@ -206,7 +211,7 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -306,8 +311,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test_input_1 = get_aoc_test_input(2025, 1)\n",
-        "print(test_input_1)"
+        "test_input_1 = get_aoc_test_input(2025, 1)"
       ],
       "metadata": {
         "colab": {
@@ -315,15 +319,14 @@
         },
         "collapsed": true,
         "id": "9ZyAlNUL8dZ2",
-        "outputId": "b2372e26-4495-4354-f59a-30c550e0fd5c"
+        "outputId": "39bef971-ccc5-47ef-e688-843a6416c4a9"
       },
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please enter your Advent of Code session cookie: 53616c7465645f5f0d7fa87f9572d9f62b618fd1bb063b3d93b709d4e4f13d3138e1ef2d7ae884ed34a1bc426c70e366187af41b90ce5479b6d489c77e9c97a3;\n",
             "Attempting to retrieve Advent of Code 2025 Day 1 problem page from https://adventofcode.com/2025/day/1...\n",
             "Successfully retrieved problem page HTML.\n",
             "\n",
@@ -585,8 +588,7 @@
             "Identified Test Input:\n",
             "---------------------\n",
             "0\n",
-            "---------------------\n",
-            "0\n"
+            "---------------------\n"
           ]
         }
       ]
@@ -622,15 +624,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IQLoFoYA9Jr1",
-        "outputId": "d35dcfcc-af8b-4090-ef7a-b7958213a6dd"
+        "outputId": "7a35f582-d716-4e40-b0f0-7d1f4bb4bcc3"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please enter your Advent of Code session cookie: 53616c7465645f5f0d7fa87f9572d9f62b618fd1bb063b3d93b709d4e4f13d3138e1ef2d7ae884ed34a1bc426c70e366187af41b90ce5479b6d489c77e9c97a3;\n",
             "Attempting to retrieve Advent of Code 2025 Day 1 puzzle input from https://adventofcode.com/2025/day/1/input...\n"
           ]
         }
